--- a/pro-Integ/views/partials/headerLogueado.ejs
+++ b/pro-Integ/views/partials/headerLogueado.ejs
@@ -4,15 +4,16 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link width="" rel="shortcut icon" href="/images/logo-mercado-liebre.jpg" />
+	<link width="" rel="shortcut icon" href="/images/logoIphonify.png" />
 	
-	<title> Mercado Liebre Argentina</title>
+	<title> IPHONIFY</title>
 			<!-- Font Awesome Stylesheet -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
 	<!-- Bootstrap Grid Stylesheet -->
 	<link rel="stylesheet" href="/css/bootstrap-grid.min.css">
 	<!-- Own Stylesheet -->
 	<link rel="stylesheet" href="/css/app.css">
+	<link rel="stylesheet" href="/css/formularios.css">
 </head>
 <body>
 	<!-- Header -->
@@ -21,12 +22,12 @@
 			<div class="row align-items-center">
 				<div class="col-5 col-md-2">
 					<a href="/" class="main-header_home-link">
-						<img src="/images/logo-mercado-liebre.svg">
+						<img class="logo" src="/images/logoIphonify.png">
 					</a>
 				</div>
 	
 				<div class="col-7 col-md-6">
-					<form action="" method="GET" class="search-form">
+					<form action="/products/detalle" method="GET" class="search-form">
 						<input type="text" name="search" placeholder="Buscar productos, marcas y más" class="search-form_input">
 						<button type="submit" class="search-form_button"><i class="fas fa-search"></i></button>
 					</form>
@@ -35,7 +36,7 @@
 				<div class="col-12 col-md-4">
 					<a class="main-header_credit-link">
 						<i class="fas fa-hand-holding-usd"></i>
-						Todas las opiniones en un solo lugar.
+						Consigue tu iPhone ideal hoy en iphonify, ¡envío gratis disponible!
 					</a>
 				</div>
 			</div>
@@ -46,18 +47,18 @@
 	
 			<nav class="main-navbar">
 				<ul class="left-navbar">
-					<li><a href="/">Todos los productos</a></li>
-					<li><a href="/agregarProducto">Cargar productos</a></li>
+					<li><a class="blancos hipervinculos" href="/">Todos los productos</a></li>
+					<li><a class="blancos hipervinculos" href="/products/agregarProducto">Cargar productos</a></li>
 				</ul>
 	
 				<ul class="right-navbar">
-					<li><a href="/users/profile">
-							Nombre del usuario <i class="fas fa-user"></i>
+					<li><a class="blancos hipervinculos" href="/users/profile">
+							<%= datosUsuario.nombreUsuario %> <i class="fas fa-user"></i>
 						</a>
 					</li>
 					<li>
-						<form action="" method="post">
-							<button class="logout" type="submit">
+						<form action="/" method="get">
+							<button class="logout blancos hipervinculos" type="submit">
 								Cerrar sesión <i class="fas fa-sign-in-alt"></i>
 							</button>
 						</form>
