--- a/pro-Integ/views/profile.ejs
+++ b/pro-Integ/views/profile.ejs
@@ -1,98 +1,27 @@
 <!DOCTYPE html>
 <html lang="es">
 <!-- Include Head -->
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link width="" rel="shortcut icon" href="/images/logo-mercado-liebre.jpg" />
-	
-	<title> Mercado Liebre Argentina</title>
-			<!-- Font Awesome Stylesheet -->
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
-	<!-- Bootstrap Grid Stylesheet -->
-	<link rel="stylesheet" href="/css/bootstrap-grid.min.css">
-	<!-- Own Stylesheet -->
-	<link rel="stylesheet" href="/css/app.css">
-</head>
-<body>
-	<!-- Header -->
-	<header class="main-header">
-		<div class="container">
-			<div class="row align-items-center">
-				<div class="col-5 col-md-2">
-					<a href="/" class="main-header_home-link">
-						<img src="/images/logo-mercado-liebre.svg">
-					</a>
-				</div>
-	
-				<div class="col-7 col-md-6">
-					<form action="" method="GET" class="search-form">
-						<input type="text" name="search" placeholder="Buscar productos, marcas y más"
-							class="search-form_input">
-						<button type="submit" class="search-form_button"><i class="fas fa-search"></i></button>
-					</form>
-				</div>
-	
-				<div class="col-12 col-md-4">
-					<a class="main-header_credit-link">
-						<i class="fas fa-hand-holding-usd"></i>
-						Todas las opiniones en un solo lugar.
-					</a>
-				</div>
-			</div>
-	
-			<button class="btn-toggle-navbar">
-				<i class="fas fa-bars"></i>
-			</button>
-	
-			<nav class="main-navbar">
-				<ul class="left-navbar">
-					<li><a href="/">Todos los productos</a></li>
-					<li><a href="/products/agregarProducto">Cargar productos</a></li>
-				</ul>
-	
-				<ul class="right-navbar">
-					<li><a href="/users/profile">
-							Nombre del usuario <i class="fas fa-user"></i>
-						</a>
-					</li>
-					<li>
-						<form action="" method="post">
-							<button class="logout" type="submit">
-								Cerrar sesión <i class="fas fa-sign-in-alt"></i>
-							</button>
-						</form>
-					</li>
-					<!-- Solo deslogueado <li>
-							<a href="register.html">Creá tu cuenta <i class="far fa-address-card"></i>
-							</a>
-						</li>
-						<li>
-							<a href="login.html">Ingresá <i class="fas fa-sign-in-alt"></i></a>
-						</li> -->
-				</ul>
-			</nav>
-		</div>
-	</header>
+<%- include('./partials/headerLogueado') %>
 	<!-- /Header -->
 
 	<!-- Datos del usuario -->
 	<section class="info-usuario container products-wrapper">
 		<div class="row">
 			<div class="img-container offset-3 col-2">
-				<img src="https://via.placeholder.com/150" alt="foto de perfil" class="foto-perfil">
+				<img src="<%=datosUsuario.fotoPerfil %>" alt="foto de perfil" class="foto-perfil">
 			</div>
 			<div class="data-container col-6">
 				<div class="d-flex align-items-center ">
-					<h1 class="main-title">Nombre del usuario 
+					<h1 class="main-title blancos"><%=datosUsuario.nombreUsuario %>
 						<a href="/users/profile-edit">
 							<i class="fas fa-cog"></i>
 						</a>
 					</h1>
-					<a class="btn mt-3 ml-4" href="">SEGUIR</a>
+					<a class="btn mt-3 ml-4" href="/users/profile-edit">EDITAR</a>
 				</div>
 				<div>
-					<ul class="">
+					<ul class="blancos">
+						<li><%=datosUsuario.email %></li>
 						<li>8 productos</li>
 						<li>200 seguidores</li>
 						<li>300 comentarios</li>
@@ -114,12 +43,12 @@
 				<section class="product-box">
 					<a href="/products">
 						<figure class="product-box_image">
-							<img src="/images/products/default-image.png" alt="cafetera moulinex">
+							<img src="<%= productos[0].imagen %>" alt="<%=productos[0].nombreProducto %>">
 						</figure>
 						<article class="product-box_data">
-							<h2>Nombre del producto</h2>
-							<p>Descripción corta del producto Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque delectus ex</p>
-							<p>Comentarios: 12</p>
+							<h2><%=productos[0].nombreProducto %></h2>
+							<p><%= productos[0].descripcion %></p>
+							<p>Comentarios: <%=comentarios.length %></p>
 						</article>
 					</a>
 				</section>
@@ -128,13 +57,12 @@
 				<section class="product-box">
 					<a href="/products">
 						<figure class="product-box_image">
-							<img src="/images/products/default-image.png" alt="cafetera moulinex">
+							<img src="<%= productos[1].imagen %>" alt="<%=productos[1].nombreProducto %>">
 						</figure>
 						<article class="product-box_data">
-							<h2>Nombre del producto</h2>
-							<p>Descripción corta del producto Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque
-								delectus ex</p>
-							<p>Comentarios: 12</p>
+							<h2><%=productos[1].nombreProducto %></h2>
+							<p><%= productos[1].descripcion %></p>
+							<p>Comentarios:<%=comentarios.length %></p>
 						</article>
 					</a>
 				</section>
@@ -143,13 +71,12 @@
 				<section class="product-box">
 					<a href="/products">
 						<figure class="product-box_image">
-							<img src="/images/products/default-image.png" alt="cafetera moulinex">
+							<img src="<%= productos[2].imagen %>" alt="<%=productos[2].nombreProducto %>">
 						</figure>
 						<article class="product-box_data">
-							<h2>Nombre del producto</h2>
-							<p>Descripción corta del producto Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque
-								delectus ex</p>
-							<p>Comentarios: 12</p>
+							<h2><%=productos[2].nombreProducto %></h2>
+							<p><%= productos[2].descripcion %></p>
+							<p>Comentarios: <%=comentarios.length %></p>
 						</article>
 					</a>
 				</section>
@@ -158,13 +85,12 @@
 				<section class="product-box">
 					<a href="/products">
 						<figure class="product-box_image">
-							<img src="/images/products/default-image.png" alt="cafetera moulinex">
+							<img src="<%= productos[3].imagen %>" alt="<%=productos[3].nombreProducto %>">
 						</figure>
 						<article class="product-box_data">
-							<h2>Nombre del producto</h2>
-							<p>Descripción corta del producto Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque
-								delectus ex</p>
-							<p>Comentarios: 12</p>
+							<h2><%=productos[3].nombreProducto %></h2>
+							<p><%= productos[3].descripcion %></p>
+							<p>Comentarios: <%=comentarios.length %></p>
 						</article>
 					</a>
 				</section>
@@ -173,13 +99,12 @@
 				<section class="product-box">
 					<a href="/products">
 						<figure class="product-box_image">
-							<img src="/images/products/default-image.png" alt="cafetera moulinex">
+							<img src="<%= productos[4].imagen %>" alt="<%=productos[4].nombreProducto %>">
 						</figure>
 						<article class="product-box_data">
-							<h2>Nombre del producto</h2>
-							<p>Descripción corta del producto Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque
-								delectus ex</p>
-							<p>Comentarios: 12</p>
+							<h2><%=productos[4].nombreProducto %></h2>
+							<p><%= productos[4].descripcion %></p>
+							<p>Comentarios: <%=comentarios.length %></p>
 						</article>
 					</a>
 				</section>
@@ -188,13 +113,12 @@
 				<section class="product-box">
 					<a href="/products">
 						<figure class="product-box_image">
-							<img src="/images/products/default-image.png" alt="cafetera moulinex">
+							<img src="<%= productos[5].imagen%>" alt="<%=productos[5].nombreProducto %>">
 						</figure>
 						<article class="product-box_data">
-							<h2>Nombre del producto</h2>
-							<p>Descripción corta del producto Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque
-								delectus ex</p>
-							<p>Comentarios: 12</p>
+							<h2><%=productos[5].nombreProducto %></h2>
+							<p><%= productos[5].descripcion %></p>
+							<p>Comentarios: <%=comentarios.length %></p>
 						</article>
 					</a>
 				</section>
@@ -203,13 +127,12 @@
 				<section class="product-box">
 					<a href="/products">
 						<figure class="product-box_image">
-							<img src="/images/products/default-image.png" alt="cafetera moulinex">
+							<img src="<%= productos[6].imagen %>" alt="<%=productos[6].nombreProducto %>">
 						</figure>
 						<article class="product-box_data">
-							<h2>Nombre del producto</h2>
-							<p>Descripción corta del producto Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque
-								delectus ex</p>
-							<p>Comentarios: 12</p>
+							<h2><%=productos[6].nombreProducto %></h2>
+							<p><%= productos[6].descripcion %></p>
+							<p>Comentarios: <%=comentarios.length %></p>
 						</article>
 					</a>
 				</section>
@@ -218,13 +141,12 @@
 				<section class="product-box">
 					<a href="/products">
 						<figure class="product-box_image">
-							<img src="/images/products/default-image.png" alt="cafetera moulinex">
+							<img src="<%= productos[7].imagen %>" alt="<%=productos[7].nombreProducto %>">
 						</figure>
 						<article class="product-box_data">
-							<h2>Nombre del producto</h2>
-							<p>Descripción corta del producto Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque
-								delectus ex</p>
-							<p>Comentarios: 12</p>
+							<h2><%=productos[7].nombreProducto %></h2>
+							<p><%= productos[7].descripcion %></p>
+							<p>Comentarios: <%=comentarios.length %></p>
 						</article>
 					</a>
 				</section>
@@ -235,36 +157,7 @@
 
 
 	<!-- footer -->
-	<footer class="main-footer">
-		<div class="container">
-			<div class="row">
-				<div class="col-12 col-lg-4">
-					<article class="footer-data">
-						<i class="fas fa-credit-card"></i>
-						<h2>Pagá con tarjeta o en efectivo</h2>
-						<p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en puntos de pago. ¡Y
-							siempre es seguro!</p>
-					</article>
-				</div>
-				<div class="col-12 col-lg-4">
-					<article class="footer-data">
-						<i class="fas fa-gift"></i>
-						<h2>Envío gratis desde $ 1.999</h2>
-						<p>Solo por estar registrado en Mercado Liebre tenés envíos gratis en miles de productos. Es un
-							beneficio de Mercado Puntos.</p>
-					</article>
-				</div>
-				<div class="col-12 col-lg-4">
-					<article class="footer-data">
-						<i class="fas fa-user-shield"></i>
-						<h2>Seguridad, de principio a fin</h2>
-						<p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer, porque estás
-							siempre protegido.</p>
-					</article>
-				</div>
-			</div>
-		</div>
-	</footer>
+	<%- include('./partials/footer') %>
 	<!-- /footer -->
 </body>	
 </html>
