--- a/pro-Integ/public/css/app.css
+++ b/pro-Integ/public/css/app.css
@@ -171,7 +171,7 @@ hr {
 
 /*====== Banner ======*/
 .banner {
-  background-image: url(/images/img-home-banner.jpg);
+  background-image: url(/images/bannerIphonify.png);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
