--- a/pro-Integ/views/index.ejs
+++ b/pro-Integ/views/index.ejs
@@ -17,64 +17,23 @@
 				<h2 class="products-title">Novedades</h2>
 			</div>
 			<!-- Show the "ultimos" products -->
-			<div class="col-12 col-sm-6 col-lg-3">
-				<section class="product-box">
-					<a href="/products">
-						<figure class="product-box_image">
-							<img src="<%= productos[0].imagen %>" alt="<%=productos[0].nombreProducto %>">
-						</figure>
-						<article class="product-box_data">
-							<h2><%=productos[0].nombreProducto %></h2>
-							<p><%= productos[0].descripcion %></p>
-							<p>Comentarios: <%=comentarios.length %></p>
-						</article>
-					</a>
-				</section>
-			</div>
-			<div class="col-12 col-sm-6 col-lg-3">
-				<section class="product-box">
-					<a href="/products">
-						<figure class="product-box_image">
-							<img src="<%= productos[1].imagen %>" alt="<%=productos[1].nombreProducto %>">
-						</figure>
-						<article class="product-box_data">
-							<h2><%=productos[1].nombreProducto %></h2>
-							<p><%= productos[1].descripcion %></p>
-							<p>Comentarios:<%=comentarios.length %></p>
-						</article>
-					</a>
-				</section>
-			</div>
-			<div class="col-12 col-sm-6 col-lg-3">
-				<section class="product-box">
-					<a href="/products">
-						<figure class="product-box_image">
-							<img src="<%= productos[2].imagen %>" alt="<%=productos[2].nombreProducto %>">
-						</figure>
-						<article class="product-box_data">
-							<h2><%=productos[2].nombreProducto %></h2>
-							<p><%= productos[2].descripcion %></p>
-							<p>Comentarios: <%=comentarios.length %></p>
-						</article>
-					</a>
-				</section>
-			</div>
-			<div class="col-12 col-sm-6 col-lg-3">
-				<section class="product-box">
-					<a href="/products">
-						<figure class="product-box_image">
-							<img src="<%= productos[3].imagen %>" alt="<%=productos[3].nombreProducto %>">
-						</figure>
-						<article class="product-box_data">
-							<h2><%=productos[3].nombreProducto %></h2>
-							<p><%= productos[3].descripcion %></p>
-							<p>Comentarios: <%=comentarios.length %></p>
-						</article>
-					</a>
-				</section>
-			</div>
-		</div>
-	</div>
+			<% for( let i = 0; i < 4; i++ ) { %>
+				<div class="col-12 col-sm-6 col-lg-3">
+					<section class="product-box">
+						<a href="/products/id/<%=data[i].id%>">
+							<figure class="product-box_image">
+								<img src="<%= data[i].imagen %>" alt="<%=data[i].producto %>">
+							</figure>
+							<article class="product-box_data">
+								<h2><%=data[i].producto %></h2>
+								<p><%= data[i].descripcion %></p>
+								<p>Usuario: <%= data[i].productoUsuario.usuario %></p>
+							</article>
+						</a>
+					</section>
+				</div>
+			<% } %>
+			
 	<!-- /Novedades -->
 	<!-- Más comentados -->
 	<div class="container products-wrapper">
@@ -83,62 +42,22 @@
 				<h2 class="products-title">Más comentados</h2>
 			</div>
 			<!-- Show the "ultimos" products -->
-			<div class="col-12 col-sm-6 col-lg-3">
-				<section class="product-box">
-					<a href="/products">
-						<figure class="product-box_image">
-							<img src="<%= productos[4].imagen %>" alt="<%=productos[4].nombreProducto %>">
-						</figure>
-						<article class="product-box_data">
-							<h2><%=productos[4].nombreProducto %></h2>
-							<p><%= productos[4].descripcion %></p>
-							<p>Comentarios: <%=comentarios.length %></p>
-						</article>
-					</a>
-				</section>
-			</div>
-			<div class="col-12 col-sm-6 col-lg-3">
-				<section class="product-box">
-					<a href="/products">
-						<figure class="product-box_image">
-							<img src="<%= productos[5].imagen%>" alt="<%=productos[5].nombreProducto %>">
-						</figure>
-						<article class="product-box_data">
-							<h2><%=productos[5].nombreProducto %></h2>
-							<p><%= productos[5].descripcion %></p>
-							<p>Comentarios: <%=comentarios.length %></p>
-						</article>
-					</a>
-				</section>
-			</div>
-			<div class="col-12 col-sm-6 col-lg-3">
-				<section class="product-box">
-					<a href="/products">
-						<figure class="product-box_image">
-							<img src="<%= productos[6].imagen %>" alt="<%=productos[6].nombreProducto %>">
-						</figure>
-						<article class="product-box_data">
-							<h2><%=productos[6].nombreProducto %></h2>
-							<p><%= productos[6].descripcion %></p>
-							<p>Comentarios: <%=comentarios.length %></p>
-						</article>
-					</a>
-				</section>
-			</div>
-			<div class="col-12 col-sm-6 col-lg-3">
-				<section class="product-box">
-					<a href="/products">
-						<figure class="product-box_image">
-							<img src="<%= productos[7].imagen %>" alt="<%=productos[7].nombreProducto %>">
-						</figure>
-						<article class="product-box_data">
-							<h2><%=productos[7].nombreProducto %></h2>
-							<p><%= productos[7].descripcion %></p>
-							<p>Comentarios: <%=comentarios.length %></p>
-						</article>
-					</a>
-				</section>
-			</div>
+			<% for( let i = 4; i < 8; i++ ) { %>
+				<div class="col-12 col-sm-6 col-lg-3">
+					<section class="product-box">
+						<a href="/products">
+							<figure class="product-box_image">
+								<img src="<%= data[i].imagen %>" alt="<%=data[i].producto %>">
+							</figure>
+							<article class="product-box_data">
+								<h2><%=data[i].producto %></h2>
+								<p><%= data[i].descripcion %></p>
+								<p>Usuario: <%= data[i].productoUsuario.usuario %></p>
+							</article>
+						</a>
+					</section>
+				</div>
+			<% } %>
 		</div>
 	</div>
 	<!-- /Más comentados -->
