--- a/pro-Integ/views/index.ejs
+++ b/pro-Integ/views/index.ejs
@@ -45,7 +45,7 @@
 			<% for( let i = 4; i < 8; i++ ) { %>
 				<div class="col-12 col-sm-6 col-lg-3">
 					<section class="product-box">
-						<a href="/products">
+						<a href="/products/id/<%=data[i].id%>">
 							<figure class="product-box_image">
 								<img src="<%= data[i].imagen %>" alt="<%=data[i].producto %>">
 							</figure>
