profile edit vista

--- a/pro-Integ/views/profile-edit.ejs
+++ b/pro-Integ/views/profile-edit.ejs
@@ -12,26 +12,26 @@
 			</div>
 			<!-- Show the "ultimos" products -->
 			<form class="formsConsigna" action="/users/profile" method="get">
-				<label class="blancos" for="email">Email:</label>
-				<input class="textosForms" type="email" id="email" name="email" value="<%=datosUsuario.email%>"><br>
-			  
-				<label class="blancos" for="usuario">Usuario:</label>
-				<input class="textosForms" type="text" id="usuario" name="usuario" value="<%=datosUsuario.nombreUsuario  %>"><br>
-			  
-				<label class="blancos" for="contraseña">Contraseña:</label>
-				<input class="textosForms" type="password" id="contraseña" name="contraseña" value="<%=datosUsuario.contraseña%>"><br>
-			  
-				<label class="blancos" for="fecha_nacimiento">Fecha de Nacimiento:</label>
-				<input class="textosForms" type="date" id="fecha_nacimiento" name="fecha_nacimiento" value="<%=datosUsuario.fechaNacimiento%>"><br>
-			  
-				<label class="blancos" for="nro_documento">Nro de Documento:</label>
-				<input class="textosForms" type="number" id="nro_documento" name="nro_documento" value="<%=datosUsuario.dni%>"><br>
-			  
-				<label class="blancos" for="foto_perfil">Foto de Perfil:</label>
-				<input class="textosForms" type="text" id="foto_perfil" name="foto_perfil" value="<%=datosUsuario.fotoPerfil%>"><br>
-			  
-				<input class="textosForms" type="submit" value="Enviar">
-			  </form>
+                <label class="blancos" for="email">Email:</label>
+                <input class="textosForms" type="email" id="email" name="email" value="<%=data.email%>"><br>
+              
+                <label class="blancos" for="usuario">Usuario:</label>
+                <input class="textosForms" type="text" id="usuario" name="usuario" value="<%=data.usuario  %>"><br>
+              
+                <label class="blancos" for="contraseña">Contraseña:</label>
+                <input class="textosForms" type="password" id="contraseña" name="contraseña" value="<%=data.contraseña%>"><br>
+              
+                <label class="blancos" for="fecha_nacimiento">Fecha de Nacimiento:</label>
+                <input class="textosForms" type="date" id="fecha_nacimiento" name="fecha_nacimiento" value="<%=data.fechaNacimiento%>"><br>
+              
+                <label class="blancos" for="nro_documento">Nro de Documento:</label>
+                <input class="textosForms" type="number" id="nro_documento" name="nro_documento" value="<%=data.dni%>"><br>
+              
+                <label class="blancos" for="foto_perfil">Foto de Perfil:</label>
+                <input class="textosForms" type="text" id="foto_perfil" name="foto_perfil" value="<%=data.fotoPerfil%>"><br>
+              
+                <input class="textosForms" type="submit" value="Enviar">
+              </form>
 
 
 	<!-- footer -->
