--- a/pro-Integ/views/profile.ejs
+++ b/pro-Integ/views/profile.ejs
@@ -2,162 +2,63 @@
 <html lang="es">
 <!-- Include Head -->
 <%- include('./partials/headerLogueado') %>
-	<!-- /Header -->
+    <!-- /Header -->
 
-	<!-- Datos del usuario -->
-	<section class="info-usuario container products-wrapper">
-		<div class="row">
-			<div class="img-container offset-3 col-2">
-				<img src="<%=datosUsuario.fotoPerfil %>" alt="foto de perfil" class="foto-perfil">
-			</div>
-			<div class="data-container col-6">
-				<div class="d-flex align-items-center ">
-					<h1 class="main-title blancos"><%=datosUsuario.nombreUsuario %>
-						<a href="/users/profile-edit">
-							<i class="fas fa-cog"></i>
-						</a>
-					</h1>
-					<a class="btn mt-3 ml-4" href="/users/profile-edit">EDITAR</a>
-				</div>
-				<div>
-					<ul class="blancos">
-						<li><%=datosUsuario.email %></li>
-						<li>8 productos</li>
-						<li>200 seguidores</li>
-						<li>300 comentarios</li>
-					</ul>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!-- /Datos del usuario -->
+    <!-- Datos del usuario -->
+    <section class="info-usuario container products-wrapper">
+        <div class="row">
+            <div class="img-container offset-3 col-2">
+                <img src="<%=data.fotoPerfil %>" alt="foto de perfil" class="foto-perfil">
+            </div>
+            <div class="data-container col-6">
+                <div class="d-flex align-items-center ">
+                    <h1 class="main-title blancos"><%=data.usuario %>
+                        <a href="/users/profile-edit/id/<%=data.id%>">
+                            <i class="fas fa-cog"></i>
+                        </a>
+                    </h1>
+                    <a class="btn mt-3 ml-4" href="/users/profile-edit/id/<%=data.id%>">EDITAR</a>
+                </div>
+                <div>
+                    <ul class="blancos">
+                        <li><%=data.email %></li>
+                        <li><%= data.usuarioProducto.length %> productos</li>
+                        <li>200 seguidores</li>
+                        <li>300 comentarios</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- /Datos del usuario -->
 
-	<!-- Mis productos -->
-	<div class="container products-wrapper">
-		<div class="row">
-			<div class="col-12">
-				<h2 class="products-title">Mis productos</h2>
-			</div>
-			<!-- Show mis productos -->
-			<div class="col-12 col-sm-6 col-lg-3">
-				<section class="product-box">
-					<a href="/products">
-						<figure class="product-box_image">
-							<img src="<%= productos[0].imagen %>" alt="<%=productos[0].nombreProducto %>">
-						</figure>
-						<article class="product-box_data">
-							<h2><%=productos[0].nombreProducto %></h2>
-							<p><%= productos[0].descripcion %></p>
-							<p>Comentarios: <%=comentarios.length %></p>
-						</article>
-					</a>
-				</section>
-			</div>
-			<div class="col-12 col-sm-6 col-lg-3">
-				<section class="product-box">
-					<a href="/products">
-						<figure class="product-box_image">
-							<img src="<%= productos[1].imagen %>" alt="<%=productos[1].nombreProducto %>">
-						</figure>
-						<article class="product-box_data">
-							<h2><%=productos[1].nombreProducto %></h2>
-							<p><%= productos[1].descripcion %></p>
-							<p>Comentarios:<%=comentarios.length %></p>
-						</article>
-					</a>
-				</section>
-			</div>
-			<div class="col-12 col-sm-6 col-lg-3">
-				<section class="product-box">
-					<a href="/products">
-						<figure class="product-box_image">
-							<img src="<%= productos[2].imagen %>" alt="<%=productos[2].nombreProducto %>">
-						</figure>
-						<article class="product-box_data">
-							<h2><%=productos[2].nombreProducto %></h2>
-							<p><%= productos[2].descripcion %></p>
-							<p>Comentarios: <%=comentarios.length %></p>
-						</article>
-					</a>
-				</section>
-			</div>
-			<div class="col-12 col-sm-6 col-lg-3">
-				<section class="product-box">
-					<a href="/products">
-						<figure class="product-box_image">
-							<img src="<%= productos[3].imagen %>" alt="<%=productos[3].nombreProducto %>">
-						</figure>
-						<article class="product-box_data">
-							<h2><%=productos[3].nombreProducto %></h2>
-							<p><%= productos[3].descripcion %></p>
-							<p>Comentarios: <%=comentarios.length %></p>
-						</article>
-					</a>
-				</section>
-			</div>
-			<div class="col-12 col-sm-6 col-lg-3">
-				<section class="product-box">
-					<a href="/products">
-						<figure class="product-box_image">
-							<img src="<%= productos[4].imagen %>" alt="<%=productos[4].nombreProducto %>">
-						</figure>
-						<article class="product-box_data">
-							<h2><%=productos[4].nombreProducto %></h2>
-							<p><%= productos[4].descripcion %></p>
-							<p>Comentarios: <%=comentarios.length %></p>
-						</article>
-					</a>
-				</section>
-			</div>
-			<div class="col-12 col-sm-6 col-lg-3">
-				<section class="product-box">
-					<a href="/products">
-						<figure class="product-box_image">
-							<img src="<%= productos[5].imagen%>" alt="<%=productos[5].nombreProducto %>">
-						</figure>
-						<article class="product-box_data">
-							<h2><%=productos[5].nombreProducto %></h2>
-							<p><%= productos[5].descripcion %></p>
-							<p>Comentarios: <%=comentarios.length %></p>
-						</article>
-					</a>
-				</section>
-			</div>
-			<div class="col-12 col-sm-6 col-lg-3">
-				<section class="product-box">
-					<a href="/products">
-						<figure class="product-box_image">
-							<img src="<%= productos[6].imagen %>" alt="<%=productos[6].nombreProducto %>">
-						</figure>
-						<article class="product-box_data">
-							<h2><%=productos[6].nombreProducto %></h2>
-							<p><%= productos[6].descripcion %></p>
-							<p>Comentarios: <%=comentarios.length %></p>
-						</article>
-					</a>
-				</section>
-			</div>
-			<div class="col-12 col-sm-6 col-lg-3">
-				<section class="product-box">
-					<a href="/products">
-						<figure class="product-box_image">
-							<img src="<%= productos[7].imagen %>" alt="<%=productos[7].nombreProducto %>">
-						</figure>
-						<article class="product-box_data">
-							<h2><%=productos[7].nombreProducto %></h2>
-							<p><%= productos[7].descripcion %></p>
-							<p>Comentarios: <%=comentarios.length %></p>
-						</article>
-					</a>
-				</section>
-			</div>
-		</div>
-	</div>
-	<!-- /Mis productos -->
+    <!-- Mis productos -->
+    <div class="container products-wrapper">
+        <div class="row">
+            <div class="col-12">
+                <h2 class="products-title">Mis productos (<%= data.usuarioProducto.length %>)</h2>
+            </div>
+            <!-- Show mis productos -->
+            <% for( let i = 0; i < data.usuarioProducto.length; i++ ) { %>
+                <div class="col-12 col-sm-6 col-lg-3">
+                    <section class="product-box">
+                        <a href="/products/id/<%=data.usuarioProducto[i].id%>">
+                            <figure class="product-box_image">
+                                <img src="<%= data.usuarioProducto[i].imagen %>" alt="<%=data.usuarioProducto[i].producto %>">
+                            </figure>
+                            <article class="product-box_data">
+                                <h2><%=data.usuarioProducto[i].producto %></h2>
+                                <p><%= data.usuarioProducto[i].descripcion %></p>
+                            </article>
+                        </a>
+                    </section>
+                </div>
+            <% } %>
+    <!-- /Mis productos -->
 
 
-	<!-- footer -->
-	<%- include('./partials/footer') %>
-	<!-- /footer -->
-</body>	
+    <!-- footer -->
+    <%- include('./partials/footer') %>
+    <!-- /footer -->
+</body> 
 </html>
