linkeado sobre nombre usuario

--- a/pro-Integ/views/product.ejs
+++ b/pro-Integ/views/product.ejs
@@ -28,7 +28,7 @@
 									<img src="<%= data.productoComentario[i].comentarioUsuario.fotoPerfil%>" alt="">
 									<div class="data">
 										<p class="user">
-										<strong> <a class="hipervinculos" href="/users/profile"><%=data.productoComentario[i].comentarioUsuario.usuario %>: </a> </strong>
+										<strong> <a class="hipervinculos" href="/users/profile/id/<%=data.productoComentario[i].comentarioUsuario.id  %>"><%=data.productoComentario[i].comentarioUsuario.usuario %>: </a> </strong>
 										<%=data.productoComentario[i].comentario %></p>
 									</div>
 								</article>
