--- a/pro-Integ/views/profile.ejs
+++ b/pro-Integ/views/profile.ejs
@@ -36,7 +36,7 @@
     <div class="container products-wrapper">
         <div class="row">
             <div class="col-12">
-                <h2 class="products-title">Mis productos (<%= data.usuarioProducto.length %>)</h2>
+                <h2 class="products-title"> Productos de "<%= data.usuario %>" (<%= data.usuarioProducto.length %>)</h2>
             </div>
             <!-- Show mis productos -->
             <% for( let i = 0; i < data.usuarioProducto.length; i++ ) { %>
