--- a/pro-Integ/views/search-results.ejs
+++ b/pro-Integ/views/search-results.ejs
@@ -15,7 +15,7 @@
 					<div class="row">
 						<!-- Show the "ultimos" products -->
 						<% if (busqueda.length == 0) { %>
-								<h2 class="resultadoBusqueda">Lo sentimos, no hay resultados para su búsqueda</h2>
+								<h2 class="resultadoBusqueda">Lo sentimos, no hay resultados para su criterio de búsqueda</h2>
 						  <% } else { %>
 							<% for( let i = 0; i < busqueda.length ; i++ ) { %>
 								<div class="col-12 col-sm-6 col-lg-3">
