--- a/pro-Integ/views/register.ejs
+++ b/pro-Integ/views/register.ejs
@@ -11,7 +11,7 @@
 				<h2 class="products-title">Registrate</h2>
 			</div>
 			<!-- Show the "ultimos" products -->
-			<form class="formsConsigna" action="/login/create" method="post">
+			<form class="formsConsigna" action="/register" method="post">
 				<label class="blancos" for="email">Email:</label>
 				<input class="textosForms" type="email" id="email" name="email"><br>
 
