--- a/pro-Integ/views/index.ejs
+++ b/pro-Integ/views/index.ejs
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html lang="es">
 <!-- Include Head -->
-<%- include('./partials/headerOriginal') %>
+<% if (locals.user != undefined) { %>
+	<%- include('./partials/headerLogueado') %>
+ <% } else { %>
+	<%- include('./partials/headerOriginal') %>
+<% } %>
 	<!-- /Header -->
 	
 	<!-- Banner -->
