--- a/pro-Integ/views/partials/headerLogueado.ejs
+++ b/pro-Integ/views/partials/headerLogueado.ejs
@@ -52,8 +52,8 @@
 				</ul>
 	
 				<ul class="right-navbar">
-					<li><a class="blancos hipervinculos" href="/users/profile/id/<%= data.id %>">
-						<%= data.usuario %> <i class="fas fa-user"></i>
+					<li><a class="blancos hipervinculos" href="/users/profile/id/<%= locals.user.id %>">
+						<%= locals.user.userName %> <i class="fas fa-user"></i>
 						</a>
 					</li>
 					<li>
