avances, cambio relaciones en controlador. Agregar producto

--- a/pro-Integ/views/product-add.ejs
+++ b/pro-Integ/views/product-add.ejs
@@ -15,9 +15,9 @@
 				<h2 class="products-title">Agregar productos</h2>
 			</div>
 			<!-- Show the "ultimos" products -->
-			<form class="formsConsigna" action="/" method="get">
+			<form class="formsConsigna" action="/products/agregarProducto" method="post">
 				<label class="blancos" for="imagen">Imagen:</label>
-				<input class="textosForms" type="file" id="imagen" name="imagen"><br>
+				<input class="textosForms" type="text" id="imagen" name="imagen"><br>
 			  
 				<label class="blancos" for="producto">Nombre del producto:</label>
 				<input class="textosForms" type="text" id="producto" name="producto"><br>
