--- a/pro-Integ/views/search-results.ejs
+++ b/pro-Integ/views/search-results.ejs
@@ -18,8 +18,8 @@
 				<div class="container products-wrapper">
 					<div class="row">
 						<!-- Show the "ultimos" products -->
-						<% if (busqueda.length == 0) { %>
-								<h2 class="resultadoBusqueda">Lo sentimos, no hay resultados para su criterio de búsqueda</h2>
+						<% if (busqueda.length == 0 || busquedaForm == "") { %>
+								<h2 class="resultadoBusqueda">Lo sentimos, no hay resultados para su criterio de búsqueda (o introduzca uno por favor). </h2>
 						  <% } else { %>
 							<% for( let i = 0; i < busqueda.length ; i++ ) { %>
 								<div class="col-12 col-sm-6 col-lg-3">
