--- a/pro-Integ/views/product.ejs
+++ b/pro-Integ/views/product.ejs
@@ -39,10 +39,17 @@
 							<% } %>
 						<% } %>
 					</section>
-					<form class="form" action="/products" method="get">
-						<input class="form-input" type="text" value="" placeholder="Agregar comentario">
-						<button type="submit" class="buy-now-button">AGREGAR COMENTARIO</button>
-					</form>
+					<% if (locals.user != undefined) { %>
+						<form class="form" action="/products/id/<%= data.id %>" method="post">
+							<input class="form-input" type="text" value="" name="comentario" placeholder="Agregar comentario">
+							<button type="submit" class="buy-now-button">AGREGAR COMENTARIO</button>
+						</form>
+						<% } else { %>
+						<form class="form" action="/login" method="get">
+							<input class="form-input" type="text" value="" placeholder="Agregar comentario">
+							<button type="submit" class="buy-now-button">AGREGAR COMENTARIO</button>
+						</form>
+						<% } %>
 					<hr>
 				</div>
 			</div>
