electiva de loguearse para comentar

--- a/pro-Integ/views/product.ejs
+++ b/pro-Integ/views/product.ejs
@@ -56,10 +56,7 @@
                             <button type="submit" class="buy-now-button">AGREGAR COMENTARIO</button>
                         </form>
                         <% } else { %>
-                        <form class="form" action="/login" method="get">
-                            <input class="form-input" type="text" value="" placeholder="Agregar comentario">
-                            <button type="submit" class="buy-now-button">AGREGAR COMENTARIO</button>
-                        </form>
+                            <p class="product-detail-description"><strong>Debe estar logueado para comentar </p>
                         <% } %>
                     <hr>
                 </div>
