--- a/pro-Integ/views/partials/headerLogueado.ejs
+++ b/pro-Integ/views/partials/headerLogueado.ejs
@@ -31,6 +31,11 @@
 						<input type="text" name="search" placeholder="Buscar productos, marcas y más" class="search-form_input">
 						<button type="submit" class="search-form_button"><i class="fas fa-search"></i></button>
 					</form>
+					<br>
+					<form action="/users/searchResultsUsuarios" method="GET" class="search-form">
+						<input type="text" name="search" placeholder="Buscar usuario" class="search-form_input">
+						<button type="submit" class="search-form_button"><i class="fas fa-search"></i></button>
+					</form>
 				</div>
 	
 				<div class="col-12 col-md-4">
